--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3"
 services: 
-    web:
+    api:
         container_name: api
-        build: .
+        build: ./api
         ports: 
             - 80:80
-        restart: always
+        restart: unless-stopped
         env_file: 
             - .env
         depends_on:
@@ -14,6 +14,17 @@ services:
     db:
         container_name: db
         image: postgres
-        restart: always
+        restart: unless-stopped
         env_file: 
             - .env
+
+    socket:
+        container_name: socket
+        build: ./socket
+        ports:
+            - 5000:5000
+        restart: unless-stopped
+        env_file:
+            - .env
+        depends_on:
+            - db
