--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,14 +2,10 @@ FROM node:alpine
 
 WORKDIR /app
 
-ENV PATH /app/node_modules/.bin:$PATH
-
-COPY package.json ./
-
-COPY package-lock.json ./
+COPY package*.json .
 
 RUN npm install
 
-COPY . ./
+COPY . .
 
-CMD ["npm", "start"]
+ENTRYPOINT ["npm", "start"]
