--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,6 +8,8 @@ services:
         restart: unless-stopped
         env_file: 
             - .env
+        volumes:
+            - ./client/src:/app/src
     api:
         volumes:
             - ./api/app:/garden_palooza_be/app
