--- a/example.env
+++ b/example.env
@@ -1,7 +1,8 @@
 URL=5000
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_DB=
+FLASK_ENV=development
+POSTGRES_USER=test
+POSTGRES_PASSWORD=test
+POSTGRES_HOST=db
+POSTGRES_DB=test
 REACT_APP_SOCKET_SERVER=localhost
 REACT_APP_SOCKET_PORT=5000
